# epp_topics

./: .gitignore  .pre-commit-config.yaml  CITATION  README.md  environment.yml  package.json  plan.md  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: wrong-statements--pointers--etc-.md
src/COURSE_SLUG/: _config.yml  config.py  landing-page_students.md  landing-page_teachers.md  task_create_book.py
src/COURSE_SLUG/chapter_template/screencast_template/: __init__.py  slides.md
src/COURSE_SLUG/example_chapter/: contents.md  objectives.md
src/COURSE_SLUG/example_chapter/screencast_template/: slides.md  task_create_screencast.py
src/COURSE_SLUG/slidev_config/: package.json  style.css
src/epp/: __init__.py  _config.yml  landing-page_students.md  landing-page_teachers.md  process_notebook.py  references.bib  task_create_book.py
src/epp/chapter_template/: config.py  in_class_exercise.ipynb  preparation.md
src/epp/chapter_template/screencast_template/: slides.md  task_create_screencast.py
src/epp/example_chapter/: contents.md
src/epp/example_chapter/screencast_template/: script.md  slides.md
src/epp_topics/: _config.yml  config.py  landing-page.md  landing-page_public.md  landing-page_teachers.md  process_notebook.py  quiz_utilities.py  slidev_utilities.py  task_create_book.py  task_create_screencasts.py  task_export_screencasts.py
src/epp_topics/_static/: custom.css
src/epp_topics/background/: config.py  content_objectives.md  internal_overview.md  objectives.md
src/epp_topics/background/file_systems/: config.py  objectives_materials.ipynb  objectives_materials.md
src/epp_topics/background/floats/: config.py  objectives_materials.ipynb  objectives_materials.md
src/epp_topics/background/graphs/: config.py  objectives_materials.ipynb  objectives_materials.md
src/epp_topics/background/os_history/: config.py  objectives.md  objectives_materials.ipynb  objectives_materials.md
src/epp_topics/chapter_template/: config.py  content_objectives.md
src/epp_topics/chapter_template/screencast_template/: slides.md
src/epp_topics/chapter_template/subchapter_1/: config.py  objectives_materials.ipynb  objectives_materials.md
src/epp_topics/debugging/: config.py  content_objectives.md
src/epp_topics/debugging/avoiding_debugging/: config.py  objectives_materials.ipynb
src/epp_topics/debugging/debugging_intro/: config.py  objectives_materials.ipynb
src/epp_topics/debugging/debugging_psychology/: config.py  objectives_materials.ipynb
src/epp_topics/debugging/debugging_strategies/: config.py  objectives_materials.ipynb
src/epp_topics/debugging/gathering_data/: config.py  objectives_materials.ipynb
src/epp_topics/debugging/pdbp/: config.py  objectives_materials.ipynb
src/epp_topics/example_chapter/: __init__.py  config.py  contents.md
src/epp_topics/example_chapter/screencast_template/: task_create_screencast.py
src/epp_topics/git/: __init__.py  config.py  content_objectives.md  internal_overview.md  objectives.md
src/epp_topics/git/branches/: objectives_materials.ipynb
src/epp_topics/git/cloning_repos/: config.py  instructions.md
src/epp_topics/git/collaboration/: config.py  objectives_materials.ipynb
src/epp_topics/git/commiting_diffing/: objectives.md
src/epp_topics/git/committing/: objectives_materials.ipynb
src/epp_topics/git/committing_diffing/: config.py  objectives_materials.ipynb  objectives_materials.md
src/epp_topics/git/creating_repos/: config.py  objectives_materials.ipynb
src/epp_topics/git/github/: objectives_materials.ipynb
src/epp_topics/git/how_git_works/: objectives_materials.ipynb
src/epp_topics/git/installing_git/: objectives_materials.ipynb
src/epp_topics/git/introduction/: config.py  objectives_materials.ipynb
src/epp_topics/git/merging_and_conflicts/: config.py  objectives_materials.ipynb
src/epp_topics/git/motivation/: config.py  objectives.md  objectives_materials.ipynb  objectives_materials.md
src/epp_topics/git/pre_commits/: config.py  objectives_materials.ipynb
src/epp_topics/git/staging/: objectives_materials.ipynb
src/epp_topics/git/undoing_things/: objectives_materials.ipynb
src/epp_topics/git/why_git/: objectives_materials.ipynb
src/epp_topics/metrics_ml/: config.py  piaac_education_and_computer_usage_by_country_5.arrow  plan.md
src/epp_topics/metrics_ml/ml_intro_diffs_metrics/: config.py  objectives_materials.ipynb
src/epp_topics/metrics_ml/overview/: config.py  objectives_materials.ipynb
src/epp_topics/metrics_ml/sklearn_cv_hyper/: config.py  objectives_materials.ipynb
src/epp_topics/metrics_ml/sklearn_intro/: config.py  objectives_materials.ipynb
src/epp_topics/metrics_ml/statsmodels_intro/: config.py  example.ipynb  objectives_materials.ipynb
src/epp_topics/metrics_ml/statsmodels_results/: config.py  example.ipynb  objectives_materials.ipynb
src/epp_topics/numerical_optimization/: config.py  simple_optimisers.py  task_plots.py
src/epp_topics/numerical_optimization/db_line_search/: config.py  objectives_materials.ipynb
src/epp_topics/numerical_optimization/db_trust_region/: config.py  objectives_materials.ipynb
src/epp_topics/numerical_optimization/df_direct_search/: config.py  objectives_materials.ipynb
src/epp_topics/numerical_optimization/df_trust_region/: config.py  (+1 more)
src/epp_topics/pandas/: config.py  dataframe_examples.ipynb  gapminder.csv  gapminder_example.ipynb
src/epp_topics/plotting/: config.py  content_objectives.md
src/epp_topics/projects/: config.py
src/epp_topics/python_basics/: config.py  internal_overview.md  objectives.md
src/epp_topics/python_installation_execution/: config.py  environment.yml
src/epp_topics/python_installation_execution_via_conda/: config.py  environment.yml
src/epp_topics/scientific_computing/: config.py  content_objectives.md  sandbox_notebook.ipynb  simple_optimisers.py  task_produce_scientific_computing_material.py
src/epp_topics/slidev_config/: style.css
src/epp_topics/software_engineering/: config.py
src/epp_topics/texts/: config.py
src/epp_topics/tools/: config.py  content_objectives.md
(+716 files in other folders)
