[project]
name = "epp_topics"
description = "Effective Programming Practices for Economists: Topics"
requires-python = ">=3.13"
dependencies = [
    "pytask"
]
dynamic = ["version"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
authors = [
    { name = "Hans-Martin von Gaudecker", email = "hmgaudecker@gmail.com" },
    { name = "Janoś Gabler", email = "janos.gabler@gmail.com" },
]
[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "CC-BY-NC-SA-4.0"

[project.urls]
Documentation = "https://github.com/OpenSourceEconomics/epp_topics"
Github = "https://github.com/OpenSourceEconomics/epp_topics"
Tracker = "https://github.com/OpenSourceEconomics/epp_topics/issues"

[build-system]
requires = ["hatchling", "hatch_vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.vcs]
version-file = "src/epp_topics/_version.py"

[tool.hatch.build.targets.sdist]
exclude = ["tests"]
only-packages = true

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.metadata]
allow-direct-references = true


[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
deepdiff = "*"
gitpython = "*"
ipykernel = "*"
ipywidgets = "*"
jupyterlab = "*"
line_profiler = "*"
nlopt = "*"
nodejs = "*"
numba = "*"
openpyxl = "*"
optimagic = "*"
pandas = ">=2.2"
plotly = "*"
pre-commit = "*"
pyarrow = ">=19.0"
pybaum = "*"
pydata-sphinx-theme = ">=0.13.3"
pygraphviz = "*"
pytask = ">=0.5"
pytest = "*"
pytest-cov = "*"
pytest-xdist = "*"
python = "~=3.13"
pyyaml = "*"
scikit-learn = "*"
setuptools_scm = "*"
snakeviz = "*"
sphinx = "*"
sphinx-automodapi = "*"
sphinx-copybutton = "*"
sphinxcontrib-mermaid = "*"
statsmodels = "*"
toml = "*"
xlrd = ">=1.0"


[tool.pixi.pypi-dependencies]
epp_topics = { path = ".", editable = true }
fides = ">=0.7.4"
jupyter-book = "*"
jupytercards = "*"
jupyterquiz = "*"
kaleido = "*"
pdbp = "*"
pyperclip = "*"

[tool.pytask.ini_options]
paths = ["./src/epp_topics"]
ignore = [
    "src/epp_topics/python_basics/executing_pytask/screencast/example/",
    "src/epp_topics/projects/what_does_pytask_do/screencast/example/",
]

[tool.ruff]
target-version = "py313"
fix = true
line-length = 88

[tool.ruff.lint]
select = ["ALL"]
extend-ignore = [
    "ANN",  # Missing type annotations.
    "B008", # Do not perform function calls in argument defaults.
    "B018",
    "BLE001",
    "COM812",  # May cause conflict with ruff's formatter.
    "D100",
    "D103", # lots of small functions missing docstrings.
    "EM101",
    "FBT001",
    "FIX002",  # allow TODOs in the code.
    "INP001", # implicit namespace packages; clashes with our pytask examples.
    "ISC001",  # May cause conflict with ruff's formatter.
    "N999", # Capitalized module name.
    "PD010",
    "PD015",
    "PD901", # `df` used a lot as example variable name.
    "PERF401", # use a list comprehension.
    "PLR0913",
    "PLR2004",  # Magic value used in comparison.
    "PT011", # catching broad exceptions in tests is just fine.
    "S101",  # Use of `assert` detected.
    "S110",
    "S301",
    "S602", # `subprocess` call with `shell=True`.
    "T201",
    "TRY003",
]

[tool.ruff.lint.per-file-ignores]
"src/epp_topics/python_basics/pathlib/__init__.py" = ["A005"]
"src/epp_topics/python_basics/executing_pytest/screencast/example/test_cobb_douglas.py" = ["PLR2004"]
"**/*.ipynb" = ["B018", "T201", "E402", "PLR2004"]
"**/config.py" = ["N811"]
"src/epp_topics/metrics_ml/**/objectives_materials.ipynb" = ["ERA001", "E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"


[tool.pytest.ini_options]
filterwarnings = []
markers = [
    "wip: Tests that are work-in-progress.",
    "unit: Flag for unit tests which target mainly a single function.",
    "integration: Flag for integration tests which may comprise of multiple unit tests.",
    "end_to_end: Flag for tests that cover the whole program.",
]
norecursedirs = ["docs"]

[tool.yamlfix]
line_length = 88
none_representation = "null"
