[metadata]
name = COURSE_SLUG
description = COURSE_TITLE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/iame-uni-bonn/course_jb_template
author = TEACHER_NAMES
author_email = hmgaudecker@uni-bonn.de
license = CC BY-NC-SA 4.0
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: CC BY-NC-SA 4.0 License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Documentation = https://github.com/iame-uni-bonn/course_jb_template
    Github = https://github.com/iame-uni-bonn/course_jb_template
    Tracker = https://github.com/iame-uni-bonn/course_jb_template/issues

[options]
packages = find:
install_requires =
    pytask
python_requires = >=3.11
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[check-manifest]
ignore =
    src/COURSE_SLUG/_version.py
