[metadata]
name = epp
description = COURSE_TITLE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/OpenSourceEconomics/epp
author = Janoś Gabler and Hans-Martin von Gaudecker
license = CC BY-NC-SA 4.0
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: CC BY-NC-SA 4.0 License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
hmgaudecker@gmail.com = hmgaudecker@uni-bonn.de
project_urls =
    Documentation = https://github.com/OpenSourceEconomics/epp
    Github = https://github.com/OpenSourceEconomics/epp
    Tracker = https://github.com/OpenSourceEconomics/epp/issues

[options]
packages = find:
install_requires =
    pytask
python_requires = >=3.11
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[check-manifest]
ignore =
    src/epp/_version.py
