[metadata]
name = epp_topics
description = Effective Programming Practices for Economists: Topics
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/OpenSourceEconomics/epp_topics
author = Janoś Gabler and Hans-Martin von Gaudecker
author_email = hmgaudecker@gmail.com
license = CC BY-NC-SA 4.0
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: CC BY-NC-SA 4.0 License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Documentation = https://github.com/OpenSourceEconomics/epp_topics
    Github = https://github.com/OpenSourceEconomics/epp_topics
    Tracker = https://github.com/OpenSourceEconomics/epp_topics/issues

[options]
packages = find:
install_requires =
    pytask
python_requires = >=3.11
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[check-manifest]
ignore =
    src/epp_topics/_version.py
